--- a/style.css
+++ b/style.css
@@ -3,27 +3,34 @@ body{
   padding:0;
   margin:0;
   background-color:#f4f4f4;
+  margin-bottom: 100px; 
+  position: relative;
+  overflow-x: hidden;
 }
 
 /* Global */
 .container{
-  width: 80%;
-  margin:auto;
+  width: 100%;
   overflow:hidden;
+  position:initial;
 }
 
 ul{
   margin:0;
   padding:0;
+  margin-bottom: 20px;
 }
 
 header{
+  padding-left: 50px;
+  width: 100%;
   background:#35424a;
   color:#ffffff;
   padding-top:30px;
   padding-bottom: 0px;
   min-height:70px;
   border-bottom:#e8491d 3px solid;
+  position:static;
 }
 
 header a{
@@ -61,6 +68,7 @@ header a:hover{
 #main{
   width: 100%;
   background-color: #e1e1e1;
+  padding-left: 70px;
 }
 
 article#main-col{
@@ -75,14 +83,6 @@ ul#services li{
   border: #cccccc solid 1px;
   margin-bottom:5px;
   background:#e6e6e6;
-}
-
-footer{
-  padding:20px;
-  margin-top:20px;
-  color:#ffffff;
-  background-color:#e8491d;
-  text-align: center;
 }
 
 /* Media Queries */
@@ -112,5 +112,14 @@ footer{
     width:100%;
     margin-bottom:5px;
   }
+}
+
+footer {
+  padding:20px;
+  position:absolute;
+  background-color: #35424a; /* Cor de fundo desejada */
+  color: #fff; /* Cor do texto desejada */
+  width: 100%;
+  text-align: center;
 }
 
